Removed example stuff

--- a/index.html
+++ b/index.html
@@ -40,7 +40,18 @@
 
   <!-- SECTION -->
   <main>
-      <!-- <section id="router-view"></section> -->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <div class="d-flex gap-3 align-items-center">
+            <button class="btn btn-outline-dark" title="Add coin to machine">
+              <i class="mdi mdi-plus-circle-multiple"></i>
+            </button>
+            <h1>Coins: 🪙🪙🪙🪙🪙</h1>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- SECTION -->
