--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-12">
           <div class="d-flex gap-3 align-items-center">
-            <button class="btn btn-outline-dark" title="Add coin to machine">
+            <button onclick="app.CoinsController.addCoin()" class="btn btn-outline-dark" title="Add coin to machine">
               <i class="mdi mdi-plus-circle-multiple"></i>
             </button>
             <h1>Coins: 🪙🪙🪙🪙🪙</h1>
