drawing coin number

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button onclick="app.CoinsController.addCoin()" class="btn btn-outline-dark" title="Add coin to machine">
               <i class="mdi mdi-plus-circle-multiple"></i>
             </button>
-            <h1>Coins: 🪙🪙🪙🪙🪙</h1>
+            <h1>Coins: <span id="coinsCount"></span></h1>
           </div>
         </div>
       </div>
