--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
-          <div class="d-flex gap-3 align-items-center">
-            <button onclick="app.CoinsController.addCoin()" class="btn btn-outline-dark" title="Add coin to machine">
+          <div class="d-flex gap-3 align-items-start">
+            <button onclick="app.CoinsController.addCoin()" class="btn btn-outline-dark mt-1"
+              title="Add coin to machine">
               <i class="mdi mdi-plus-circle-multiple"></i>
             </button>
             <h1>Coins: <span id="coinsCount"></span></h1>
