--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- SECTION -->
   <main>
     <div class="container-fluid">
-      <div class="row">
+      <section class="row">
         <div class="col-12">
           <div class="d-flex gap-3 align-items-start">
             <button onclick="app.CoinsController.addCoin()" class="btn btn-outline-dark mt-1"
@@ -51,7 +51,16 @@
             <h1>Coins: <span id="coinsCount"></span></h1>
           </div>
         </div>
-      </div>
+      </section>
+
+      <section class="row">
+        <div id="gachamons-buttons" class="col-12">
+          <!-- STUB gachamon button template -->
+          <!-- <button class="btn btn-outline-dark fs-1" title="See details for Jake the Snake">
+            🐍
+          </button> -->
+        </div>
+      </section>
     </div>
   </main>
 
