--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
   <!-- SECTION -->
   <main>
-    <div class="container-fluid">
-      <section class="row">
+    <div class="container">
+      <section class="row my-3">
         <div class="col-12">
           <div class="d-flex gap-3 align-items-start">
             <button onclick="app.CoinsController.addCoin()" class="btn btn-outline-dark mt-1"
@@ -53,13 +53,30 @@
         </div>
       </section>
 
-      <section class="row">
+      <section class="row mb-3">
         <div id="gachamons-buttons" class="col-12">
           <!-- STUB gachamon button template -->
           <!-- <button class="btn btn-outline-dark fs-1" title="See details for Jake the Snake">
             🐍
           </button> -->
         </div>
+      </section>
+
+      <section class="row">
+        <!-- STUB gachamon card template -->
+        <!-- <div class="col-12 d-flex justify-content-center">
+          <div class="px-5 py-3 gachamon-card">
+            <p class="display-1">
+              🐘
+            </p>
+            <p class="fs-1">
+              Herbert
+            </p>
+            <p class="fs-2">
+              Ultra-Rare
+            </p>
+          </div>
+        </div> -->
       </section>
     </div>
   </main>
