drawing active gachamon

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
       </section>
 
-      <section class="row">
+      <section id="gachamon-details" class="row">
         <!-- STUB gachamon card template -->
         <!-- <div class="col-12 d-flex justify-content-center">
           <div class="px-5 py-3 gachamon-card">
