getting random gachamon

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             </button>
             <h1>Coins: <span id="coinsCount"></span></h1>
           </div>
+          <div>
+            <button onclick="app.GachamonsController.getRandomGachamon()" class="btn btn-outline-success">
+              Get Random Gachamon!
+            </button>
+          </div>
         </div>
       </section>
 
