--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
 
   <!-- SECTION -->
   <footer class="bg-dark text-light">
-    <div class="text-center no-select">
-      <p class="mb-0"><small>Made with 💖 by CodeWorks</small></p>
+    <div class="container-fluid">
+      <div class="row">
+        <div id="my-gachamons" class="col-12"></div>
+      </div>
     </div>
   </footer>
 
